2025-12-02  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.7-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.7-alpha02: Black-eyed P\'s';git push
	git tag -a 5.3.7-alpha02 -m 'ncremap: hone nco_mss_val_get_dbl()-suggested ncatted command; ncks: jsn att/var fmt fix';git push --tags

	* Improve suggested ncatted command when mss_val_dbl = NaN in nco_mss_val_get_dbl()

2025-11-20  Charlie Zender  <zender@uci.edu>

	* Fix variable JSON format to always be type = 2 and print type, shape

	* Fix jsn_att_fmt regression, restore printing attributes as objects, reported by Andrew Barna

2025-11-06  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.7-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.7-alpha01: Reuptake Inhibitor';git push
	git tag -a 5.3.7-alpha01 -m 'Functionally identical to 5.3.6 except for two ncclimo name generation corner case fixes';git push --tags

	* ncclimo MPAS automatic name generation fixed to insert dot only when caseid option is used

	* ncclimo fix trim_leading_zeros() to work when input year is 0

2025-10-29  Charlie Zender  <zender@uci.edu>

	* ncks: Note that i,j are lat,lon not lon,lat with CMCC-ESM2 convention (opposite of usual NEMO CMIP5 convention)

2025-10-28  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.6 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.6: Goff Island';git push
	git tag -a 5.3.6 -m 'ncremap/ncks: Fix 5.3.5 row/col check, nco_idw=ncoidw; ncremap/ncclimo: E3SMU_PATH for v1.12; ncclimo lndgrid is 2D';git push --tags

2025-10-27  Charlie Zender  <zender@uci.edu>

	* Merge changes to E3SMU_PATH by Andrew Nolan into ncremap/ncclimo

2025-10-17  Charlie Zender  <zender@uci.edu>

	* nco_grd_nfr() Add stubs to correctly infer corners of 2D regional grids that cross longitude branch cut

2025-10-16  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.6-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.6-alpha02: Casa Chimayo';git push